# Trajan

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TrajanEditor/: CMakeLists.txt
TrajanEditor/src/: main.cpp
TrajanEngine/: CMakeLists.txt
TrajanEngine/src/: Component.hpp  ComponentArray.hpp  ComponentManager.hpp  Engine.cpp  Engine.hpp  EntityManager.hpp  ILogger.hpp  IRenderer.hpp  Log.hpp  Logger.cpp  Logger.hpp  Math.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  Orchestrator.hpp  ShaderCompiler.cpp  ShaderCompiler.hpp  System.hpp  SystemManager.hpp  TrajanEngine.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  Window.cpp  Window.hpp  main.cpp  sources.cmake  trajan_engine.hpp
TrajanEngine/src/components/: sprite.hpp  transform_2d.hpp
TrajanEngine/src/core/: asset_handle.hpp  asset_system.hpp  component_array.hpp  component_manager.hpp  engine.cpp  engine.hpp  entity.hpp  entity_manager.hpp  i_asset_manager.hpp  i_logger.hpp  i_renderer.hpp  log.hpp  logger.cpp  logger.hpp  mesh.hpp  mesh_manager.hpp  orchestrator.hpp  shader.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_manager.hpp  system.hpp  system_manager.hpp  texture.hpp  uuid.hpp  window.cpp  window.hpp
TrajanEngine/src/opengl/: opengl_renderer.cpp  opengl_renderer.hpp
TrajanEngine/src/systems/: render_system.cpp  render_system.hpp
TrajanEngine/src/vulkan/: vulkan_renderer.cpp  vulkan_renderer.hpp
shaders/: test_shader.vert.glsl
